WebCore:

Reviewed by Darin.

        DOMRange doesn't correctly re-size when inserting items (Acid3)
        http://bugs.webkit.org/show_bug.cgi?id=16764

        Update the offset for the range when inserting items into the range.

        Test: fast/dom/Range/range-modifycontents.html

        * dom/Range.cpp:
        (WebCore::Range::insertNode):

LayoutTests:

        Reviewed by Darin.

        DOMRange doesn't correctly re-size when inserting items (Acid3)
        http://bugs.webkit.org/show_bug.cgi?id=16764

        Update the offset for the range when inserting items into the range.

        * fast/dom/Range/range-modifycontents-expected.txt: Added.
        * fast/dom/Range/range-modifycontents.html: Added.
        * fast/dom/Range/resources/range-modifycontents.js: Added.



Canonical link: https://commits.webkit.org/23052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29214 268f45cc-cd09-0410-ab3c-d52691b4dbfc